--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <section>
             <div class="container">
                 <div class="main-google-ad-container">
-                    <div class="top_banner">ADVERTISEMENT 970x250</div>
+                    <div class="top_banner"><img src="https://tpc.googlesyndication.com/simgad/7621024500858374134"></div>
                 </div>
 
                 <div class="section-heading-container">
