--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <li><i class="fa fa-tick"></i>We Bargain for you and share the Best Offer</li>
                             <li><i class="fa fa-tick"></i>We ensure Safe & Secure Transaction</li>
                         </ul>
-                        <a href="#" class="btn btn-secondary btn-lg">Register Your Car</a>
+<a href="#" class="btn btn-success btn-lg">Register Your Car</a>
                     </div>
                 </div>
             </div>
